Add to new mockup

--- a/mockup/cdcux.html
+++ b/mockup/cdcux.html
@@ -12,7 +12,7 @@
     <style>
         .auto-width {width: auto;}
     </style>
-    <title>Clinical Data Conduit</title>
+    <title>DUSTER</title>
 </head>
 <body>
 
@@ -20,14 +20,14 @@
 <div class="container">
     <form>
         <div class="row justify-content-start">
-            <div class="col-12"><h1>Clinical Data Conduit</h1></div>
+            <div class="col-12"><h1>DUSTER</h1><h4>Data Upload Service for Translational rEsearch on Redcap</h4></div>
         </div>
         <div id="page1" >
             <div class="row justify-content-start">
                 <div class="row">
                     <div class="col-8">
                         <p>
-                            Welcome to Stanford REDCap's Clinical Data Conduit, a self-service tool to automatically import clinical data associated with research subjects in your study.
+                            Welcome to Stanford REDCap's DUSTER, a self-service tool to automatically import clinical data associated with research subjects in your study.
                         </p>
                         <p>
                             Clinical data is always associated with (1) a patient, and (2) a date and time of day.
