--- a/pages/js/vue/duster/index.html
+++ b/pages/js/vue/duster/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/modules-local/duster_v99.9.9/pages/js/vue/duster/dist/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>DUSTER</title>
   </head>
   <body>
     <div id="app"></div>
