--- a/pages/js/duster/new-project/index.html
+++ b/pages/js/duster/new-project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/modules-local/duster_v2000.0.0/pages/js/duster/shared/src/assets/images/favicon.ico">
+  <link rel="icon" href="../shared/src/assets/images/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DUSTER</title>
 </head>
